welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:14: error: type mismatch;
 found   : Unit
 required: Boolean
while (biscuit)
       ^Program:14: error: type mismatch;
 found   : Unit
 required: Boolean
while (biscuit)
^