welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
var vuBiscuit = false
def haveBaggle()
	{for (i <- 1 to 6)
		{if (estSurBiscuit)
			{vuBiscuit = true}
		avance()}
	for (i<- 1 to 6)
		{recule()}
	return (vuBiscuit)}

var biscuit = haveBaggle()
while (biscuit)
	{gauche()
	avance()
	biscuit = haveBaggle()}
}